--- a/app/src/main/res/layout-land/president_pager_item.xml
+++ b/app/src/main/res/layout-land/president_pager_item.xml
@@ -7,22 +7,22 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
+        android:layout_alignParentLeft="true"
         />
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/image"
+        android:layout_alignParentRight="true"
         style = "@style/PresidentInfo"
         tools:text="Name"/>
     <TextView
         android:id="@+id/number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/image"
+        android:layout_below="@id/name"
         android:layout_alignParentRight="true"
         style = "@style/PresidentInfo"
         tools:text="Number"/>
@@ -30,14 +30,16 @@
         android:id="@+id/office"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/name"
+        android:adjustViewBounds = "true"
+        android:layout_below="@id/number"
+        android:layout_alignParentRight="true"
         style = "@style/PresidentInfo"
         tools:text="Office"/>
     <TextView
         android:id="@+id/life"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/number"
+        android:layout_below="@id/office"
         android:layout_alignParentRight="true"
         style = "@style/PresidentInfo"
         tools:text="Life"/>
@@ -46,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/life"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentRight="true"
         style = "@style/PresidentInfo"
         tools:text="Party"/>
 </RelativeLayout>
