--- a/app/src/main/res/layout/president_list_item.xml
+++ b/app/src/main/res/layout/president_list_item.xml
@@ -3,10 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id = "@+id/image"
-        />
+        android:id = "@+id/name"
+        style="@style/PresidentInfo"/>
 
 </LinearLayout>
